--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@assets/*": ["src/assets/*"],
       "@layouts/*": ["src/layouts/*"],
       "@icons/*": ["src/icons/*"],
+      "@img/*": ["src/assets/img/*"],
     }
   },
   "extends": "astro/tsconfigs/strict"
