--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.2.1",
     "tailwindcss": "^3.4.1"
   }
