--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -12,8 +12,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
-    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.2.1",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.1"
   }
 }
