Refactor components to use external JSON data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@assets/*": ["src/assets/*"],
       "@layouts/*": ["src/layouts/*"],
       "@icons/*": ["src/icons/*"],
+      "@data/*": ["src/data/*"],
       "@img/*": ["src/assets/img/*"],
     }
   },
